# monorepo-project-template

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  mise.toml
.cursor/rules/: project-conventions.mdc
.github/workflows/: ci-app-example-api.yml  ci-app-example-web.yml  ci_monorepo.yml  deploy-app-example-api.yml  deploy-app-example-web.yml
apps/example-api/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  server.py
apps/example-api/app/: config.py  main.py
apps/example-api/app/api/routes/: health.py  sample_resource.py
apps/example-api/app/clients/llm/: __init__.py  base.py  openai.py
apps/example-api/app/logging/: __init__.py  context.py  formatter.py  logger.py  middleware.py  setup.py
apps/example-api/app/schemas/: health.py  sample_resource.py
apps/example-api/app/services/: errors.py  sample_resource.py
apps/example-api/docs/operations/: configuration.md  infrastructure.md  observability.md
apps/example-api/scripts/: bootstrap.sh  deploy.sh  rollback.sh  run.sh  smoke.sh  version.sh
apps/example-api/tests/: conftest.py  test_health.py  test_sample_resource.py  test_settings.py
apps/example-web/: .env.example  Makefile  README.md  eslint.config.js  package-lock.json  package.json
docs/operations/: infrastructure.md  observability.md
evals/: PROCESS.md
evals/baselines/: example.json
evals/scripts/: compare.py  reviews.py  run.py
infra/bootstrap/: backend.tf.example  iam_github_oidc.tf  main.tf  outputs.tf  providers.tf  variables.tf
scripts/: generate-backend-configs.sh
(+38 files in other folders)
